feat: handle auth flow
