# api/docs/auth/service.swagger.yaml
@@ -50,8 +50,24 @@ paths:
       tags:
         - Auth
 definitions:
+  LoginReplyData:
+    type: object
+    properties:
+      accountId:
+        type: string
+        format: int64
+      token:
+        type: string
   authLoginReply:
     type: object
+    properties:
+      code:
+        type: integer
+        format: int32
+      message:
+        type: string
+      data:
+        $ref: '#/definitions/LoginReplyData'
   authLoginRequest:
     type: object
     properties:
@@ -61,14 +77,22 @@ definitions:
         type: string
   authRegisterAccountReply:
     type: object
+    properties:
+      code:
+        type: integer
+        format: int32
+      message:
+        type: string
   authRegisterAccountRequest:
     type: object
     properties:
       fullName:
         type: string
+        title: required
       phoneNumber:
         type: string
         format: int64
+        title: 'format: 84914293341, currently only support VN'
       email:
         type: string
       username:
@@ -77,7 +101,7 @@ definitions:
         type: string
       birthday:
         type: string
-        title: '- Latest login'
+        title: 'format RFC3339, date only: 2012-08-20'
   protobufAny:
     type: object
     properties:
