# api/grpc/auth/service.pb.validate.go
@@ -171,6 +171,10 @@ func (m *RegisterAccountReply) validate(all bool) error {
 
 	var errors []error
 
+	// no validation rules for Code
+
+	// no validation rules for Message
+
 	if len(errors) > 0 {
 		return RegisterAccountReplyMultiError(errors)
 	}
@@ -376,6 +380,39 @@ func (m *LoginReply) validate(all bool) error {
 
 	var errors []error
 
+	// no validation rules for Code
+
+	// no validation rules for Message
+
+	if all {
+		switch v := interface{}(m.GetData()).(type) {
+		case interface{ ValidateAll() error }:
+			if err := v.ValidateAll(); err != nil {
+				errors = append(errors, LoginReplyValidationError{
+					field:  "Data",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		case interface{ Validate() error }:
+			if err := v.Validate(); err != nil {
+				errors = append(errors, LoginReplyValidationError{
+					field:  "Data",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		}
+	} else if v, ok := interface{}(m.GetData()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return LoginReplyValidationError{
+				field:  "Data",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
 	if len(errors) > 0 {
 		return LoginReplyMultiError(errors)
 	}
@@ -452,3 +489,107 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = LoginReplyValidationError{}
+
+// Validate checks the field values on LoginReply_Data with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// first error encountered is returned, or nil if there are no violations.
+func (m *LoginReply_Data) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on LoginReply_Data with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// LoginReply_DataMultiError, or nil if none found.
+func (m *LoginReply_Data) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *LoginReply_Data) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for AccountId
+
+	// no validation rules for Token
+
+	if len(errors) > 0 {
+		return LoginReply_DataMultiError(errors)
+	}
+
+	return nil
+}
+
+// LoginReply_DataMultiError is an error wrapping multiple validation errors
+// returned by LoginReply_Data.ValidateAll() if the designated constraints
+// aren't met.
+type LoginReply_DataMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m LoginReply_DataMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m LoginReply_DataMultiError) AllErrors() []error { return m }
+
+// LoginReply_DataValidationError is the validation error returned by
+// LoginReply_Data.Validate if the designated constraints aren't met.
+type LoginReply_DataValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e LoginReply_DataValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e LoginReply_DataValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e LoginReply_DataValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e LoginReply_DataValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e LoginReply_DataValidationError) ErrorName() string { return "LoginReply_DataValidationError" }
+
+// Error satisfies the builtin error interface
+func (e LoginReply_DataValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sLoginReply_Data.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = LoginReply_DataValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = LoginReply_DataValidationError{}
